<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_marginEnd="12dp"
                tools:src="@color/cardview_dark_background"
                android:contentDescription="@string/character_image" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/img_item_photo">
                <TableRow
                    style="@style/DetailTableRow">
                    <TextView
                        style="@style/TextDetailTable.Field"
                        android:text="@string/name" />
                    <TextView
                        style="@style/TextDetailTable.Value"
                        android:id="@+id/tv_item_name"
                        tools:text="@string/character_name"/>
                </TableRow>
                <TableRow
                    style="@style/DetailTableRow">
                    <TextView
                        style="@style/TextDetailTable.Field"
                        android:text="@string/occupation" />
                    <TextView
                        style="@style/TextDetailTable.Value"
                        android:id="@+id/tv_item_occupation"
                        tools:text="@string/character_occupation"/>
                </TableRow>
                <TableRow
                    style="@style/DetailTableRow">
                    <TextView
                        style="@style/TextDetailTable.Field"
                        android:text="@string/bounty" />
                    <TextView
                        style="@style/TextDetailTable.Value"
                        android:id="@+id/tv_item_bounty"
                        tools:text="@string/character_bounty"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            tools:text="@string/detail"/>
    </LinearLayout>
</ScrollView>